# solitaire

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/card/: mod.rs
src/deck/: mod.rs
src/input/: mod.rs
src/logger/: mod.rs
src/moves/: mod.rs
