[package]
name = "solitaire"
version = "0.1.0"
authors = ["Mario Jiménez <mario_mj16@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4"
crossterm = "0.17"
log = "0.4"
rand = "0.7"
simplelog = "0.7"
undo = "0.40"
